tools/cgoslx-gpio/CgosLib/Cgos.h


#define cgosret_bool CGOSDLLAPI unsigned int CGOSAPI

//***************************************************************************

//
// Board handle
//

typedef unsigned long HCGOS;

#define CGOS_WDOG_EVENT_MAX_STAGES 3

typedef struct {
  unsigned long dwTimeout;
  unsigned long dwEvent;
  } CGOSWDSTAGE;


typedef struct {
  unsigned long dwSize;
  unsigned long dwTimeout; // not used in staged mode
  unsigned long dwDelay;
  unsigned long dwMode;
  // optional parameters for staged watchdog
  unsigned long dwOpMode;
  unsigned long dwStageCount;
  CGOSWDSTAGE stStages[CGOS_WDOG_EVENT_MAX_STAGES];
  } CGOSWDCONFIG;

typedef struct {
  unsigned long dwSize;
  unsigned long dwFlags;
  unsigned long dwMinTimeout;
  unsigned long dwMaxTimeout;
  unsigned long dwMinDelay;
  unsigned long dwMaxDelay;
  unsigned long dwOpModes;         // supported operation mode mask (1<<opmode)
  unsigned long dwMaxStageCount;
  unsigned long dwEvents;          // supported event mask (1<<event)
  unsigned long dwType;
  } CGOSWDINFO;
cgosret_bool CgosI2CGetFrequency(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting); // 1.3
cgosret_bool CgosI2CSetFrequency(HCGOS hCgos, unsigned long dwUnit, unsigned long dwSetting); // 1.3

// General purpose IO

cgosret_ulong CgosIOCount(HCGOS hCgos);

cgosret_bool CgosIOIsAvailable(HCGOS hCgos, unsigned long dwUnit);

cgosret_bool CgosIORead(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwData);

cgosret_bool CgosIOWrite(HCGOS hCgos, unsigned long dwUnit, unsigned long dwData);

cgosret_bool CgosIOGetDirection(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwData);

cgosret_bool CgosIOSetDirection(HCGOS hCgos, unsigned long dwUnit, unsigned long dwData);

cgosret_bool CgosIOGetDirectionCaps(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwInputs, unsigned long *pdwOutputs);

cgosret_bool CgosIOGetNameA(HCGOS hCgos, unsigned long dwUnit, char *pszName, unsigned long dwSize);


// Watchdog

cgosret_ulong CgosWDogCount(HCGOS hCgos);

cgosret_bool CgosWDogIsAvailable(HCGOS hCgos, unsigned long dwUnit);

cgosret_bool CgosWDogTrigger(HCGOS hCgos, unsigned long dwUnit);

cgosret_bool CgosWDogGetConfigStruct(HCGOS hCgos, unsigned long dwUnit, CGOSWDCONFIG *pConfig);

cgosret_bool CgosWDogSetConfigStruct(HCGOS hCgos, unsigned long dwUnit, CGOSWDCONFIG *pConfig);

cgosret_bool CgosWDogSetConfig(HCGOS hCgos, unsigned long dwUnit, unsigned long timeout, unsigned long delay, unsigned long mode);

cgosret_bool CgosWDogDisable(HCGOS hCgos, unsigned long dwUnit);

cgosret_bool CgosWDogGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSWDINFO *pInfo);


// Temperature

cgosret_ulong CgosTemperatureCount(HCGOS hCgos);