tools/CgosPy_1_2/cgos/cgos.py


# bool CgosI2CGetFrequency(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting)
def i2cGetFrequency(dwUnit):
	_cgos.CgosI2CGetFrequency.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosI2CGetFrequency.restype = ctypes.c_bool
	pdwSetting = ctypes.c_ulong(0)
	if _cgos.CgosI2CGetFrequency(hCgos, dwUnit, pdwSetting) == True: return pdwSetting.value
	else: return False
# bool CgosI2CSetFrequency(HCGOS hCgos, unsigned long dwUnit, unsigned long pdwSetting)
def i2cSetFrequency(dwUnit, pdwSetting):
	_cgos.CgosI2CSetFrequency.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong)
	_cgos.CgosI2CSetFrequency.restype = ctypes.c_bool
	return _cgos.CgosI2CSetFrequency(hCgos, dwUnit, pdwSetting)

	#################################
	#####   FUNCTION GROUP IO   #####
	#################################

# ulong CgosIOCount(HCGOS hCgos)
def ioCount():
	_cgos.CgosIOCount.argtype = ctypes.c_uint
	_cgos.CgosIOCount.restype = ctypes.c_ulong
	return _cgos.CgosIOCount(hCgos)

# bool CgosIOIsAvailable(HCGOS hCgos, unsigned long dwUnit)
def ioIsAvailable(dwUnit):
	_cgos.CgosIOIsAvailable.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosIOIsAvailable.restype = ctypes.c_bool
	return _cgos.CgosIOIsAvailable(hCgos, dwUnit)
	
# bool CgosIORead(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwData)
def ioRead(dwUnit):
	_cgos.CgosIORead.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosIORead.restype = ctypes.c_bool
	pdwData = ctypes.c_ulong(0)
	if _cgos.CgosIORead(hCgos, dwUnit, ctypes.byref(pdwData)) == True: return pdwData.value
	else: return False

# bool CgosIOWrite(HCGOS hCgos, unsigned long dwUnit, unsigned long dwData)
def ioWrite(dwUnit, dwData):
	_cgos.CgosIOWrite.argtypes =(ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong)
	_cgos.CgosIOWrite.restype = ctypes.c_bool
	return _cgos.CgosIOWrite(hCgos, dwUnit, dwData)

# bool CgosIOGetDirectionCaps(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwInputs, unsigned long *pdwOutputs)
def ioGetDirectionCaps(dwUnit):
	_cgos.CgosIOGetDirectionCaps.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong), ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosIOGetDirectionCaps.restype = ctypes.c_bool
	pdwInputs = ctypes.c_ulong(0)
	pdwOutputs = ctypes.c_ulong(0)
	if _cgos.CgosIOGetDirectionCaps(hCgos, dwUnit, pdwInputs, pdwOutputs) == True:
		results = {'pdwInputs': pdwInputs.value, 'pdwOutputs' : pdwOutputs.value}
		return results
	else: return False

# bool CgosIOGetDirection(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwData)
def ioGetDirection(dwUnit):
	_cgos.CgosIOGetDirection.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosIOGetDirection.restype = ctypes.c_bool
	pdwData = ctypes.c_ulong(0)
	if _cgos.CgosIOGetDirection(hCgos, dwUnit, pdwData) == True: return pdwData.value
	else: return False

# bool CgosIOSetDirection(HCGOS hCgos, unsigned long dwUnit, unsigned long dwData)
def ioSetDirection(dwUnit, dwData):
	_cgos.CgosIOSetDirection.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong)
	_cgos.CgosIOSetDirection.restype = ctypes.c_bool
	return _cgos.CgosIOSetDirection(hCgos, dwUnit, dwData)

# cgosret_bool CgosIOGetNameA(HCGOS hCgos, unsigned int dwUnit, char *pszName, unsigned int dwSize);
'''
MOD001 v

def ioGetName(dwUnit):
	_cgos.CgosIOGetNameA.argtypes = (ctypes.c_uint, ctypes.c_uint, ctypes.c_char_p, ctypes.c_uint)
	_cgos.CgosIOGetNameA.restype = ctypes.c_bool
	dwSize = ctypes.c_ulong(128)
	pszName = ctypes.create_string_buffer(dwSize.value)
	if _cgos.CgosIOGetNameA(hCgos, dwUnit, pszName, dwSize) == True: return pszName.value
	else: return False
	
MOD001 ^

'''
	###################################
	#####   FUNCTION GROUP WDOG   #####
	###################################

CGOS_WDOG_EVENT_MAX_STAGES = 3

class CGOSWDSTAGE (ctypes.Structure):
	_fields_ = [
		('dwTimeout', ctypes.c_uint32),
		('dwEvent', ctypes.c_uint32),
	]

class CGOSWDCONFIG(ctypes.Structure):
	_fields_ = [
		('dwSize', ctypes.c_uint32),
		('dwTimeout', ctypes.c_uint32), # not used in staged mode
		('dwDelay', ctypes.c_uint32),
		('dwMode', ctypes.c_uint32),
		# optional parameters for staged watchdog
		('dwOpMode', ctypes.c_uint32),
		('dwStageCount', ctypes.c_uint32),
		('stStages',CGOSWDSTAGE * CGOS_WDOG_EVENT_MAX_STAGES),
	]

# ulong CgosWDogCount(HCGOS hCgos)
def wdogCount():
	_cgos.CgosWDogCount.argtype = ctypes.c_uint
	_cgos.CgosWDogCount.restype = ctypes.c_ulong
	return _cgos.CgosWDogCount(hCgos)

# bool CgosWDogIsAvailable(HCGOS hCgos, unsigned long dwUnit)
def wdogIsAvailable(dwUnit):
	_cgos.CgosWDogIsAvailable.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosWDogIsAvailable.restype = ctypes.c_bool
	return _cgos.CgosWDogIsAvailable(hCgos, dwUnit)

# bool CgosWDogTrigger(HCGOS hCgos, unsigned long dwUnit)
def wdogTrigger(dwUnit):
	_cgos.CgosWDogTrigger.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosWDogTrigger.restype = ctypes.c_bool
	return _cgos.CgosWDogTrigger(hCgos, dwUnit)

# bool CgosWDogGetConfigStruct(HCGOS hCgos, unsigned long dwUnit, CGOSWDCONFIG *pConfig)
def wdogGetConfigStruct(dwUnit):
	cgoswdconfig = CGOSWDCONFIG(0)
	cgoswdstage = CGOSWDSTAGE(0)
	cgoswdconfig.dwSize = (ctypes.sizeof(ctypes.c_uint32)*6) + (len((cgoswdstage._fields_) * ctypes.sizeof(ctypes.c_uint32)) * CGOS_WDOG_EVENT_MAX_STAGES)
	_cgos.CgosWDogGetConfigStruct.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_voidp)
	_cgos.CgosWDogGetConfigStruct.restype = ctypes.c_bool
	if (_cgos.CgosWDogGetConfigStruct(hCgos, dwUnit, ctypes.addressof(cgoswdconfig))) == True:
		results = {}
		stStages0 = {}
		stStages1 = {}
		stStages2 = {}
		for field in cgoswdconfig._fields_: results[field[0]] = getattr(cgoswdconfig, field[0])
		del results['stStages']
		results['stStages0'] = { 'dwTimeout' : cgoswdconfig.stStages[0].dwTimeout, 'dwEvent' : cgoswdconfig.stStages[0].dwEvent }
		results['stStages1'] = { 'dwTimeout' : cgoswdconfig.stStages[1].dwTimeout, 'dwEvent' : cgoswdconfig.stStages[1].dwEvent }
		results['stStages2'] = { 'dwTimeout' : cgoswdconfig.stStages[2].dwTimeout, 'dwEvent' : cgoswdconfig.stStages[2].dwEvent }
		return results
	else : return False

# bool CgosWDogSetConfigStruct(HCGOS hCgos, unsigned long dwUnit, CGOSWDCONFIG *pConfig)
def wdogSetConfigStruct(dwUnit, pConfig):
	cgoswdconfig = CGOSWDCONFIG(0)
	cgoswdstage = CGOSWDSTAGE(0)


	cgoswdconfig.dwSize = ((ctypes.sizeof(ctypes.c_uint32)*6) + ((len(cgoswdstage._fields_) * ctypes.sizeof(ctypes.c_uint32)) * CGOS_WDOG_EVENT_MAX_STAGES))
	if 'dwTimeout' in pConfig: cgoswdconfig.dwTimeout = pConfig['dwTimeout']
	if 'dwDelay' in pConfig: cgoswdconfig.dwDelay = pConfig['dwDelay']
	if 'dwMode' in pConfig: cgoswdconfig.dwMode = pConfig['dwMode']
	if 'dwOpMode' in pConfig: cgoswdconfig.dwOpMode = pConfig['dwOpMode']
	if 'dwStageCount' in pConfig: cgoswdconfig.dwStageCount = pConfig['dwStageCount']
	if 'stStages0' in pConfig:
		if 'dwTimeout' in pConfig['stStages0']: cgoswdconfig.stStages[0].dwTimeout = pConfig['stStages0']['dwTimeout']
		if 'dwEvent' in pConfig['stStages0']: cgoswdconfig.stStages[0].dwEvent = pConfig['stStages0']['dwEvent']
	if 'stStages1' in pConfig:
		if 'dwTimeout' in pConfig['stStages1']: cgoswdconfig.stStages[1].dwTimeout = pConfig['stStages1']['dwTimeout']
		if 'dwEvent' in pConfig['stStages1']: cgoswdconfig.stStages[1].dwEvent = pConfig['stStages1']['dwEvent']
	if 'stStages2' in pConfig:
		if 'dwTimeout' in pConfig['stStages2']: cgoswdconfig.stStages[2].dwTimeout = pConfig['stStages2']['dwTimeout']
		if 'dwEvent' in pConfig['stStages2']: cgoswdconfig.stStages[2].dwEvent = pConfig['stStages2']['dwEvent']
	#_cgos.CgosWDogGetConfigStruct.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_voidp) MOD003
	_cgos.CgosWDogGetConfigStruct.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_void_p)
	_cgos.CgosWDogGetConfigStruct.restype = ctypes.c_bool
	cgoswdconfig = ctypes.cast(ctypes.pointer(cgoswdconfig), ctypes.POINTER(ctypes.c_void_p)) #MOD003
	#return (_cgos.CgosWDogSetConfigStruct(hCgos, dwUnit, ctypes.addressof(cgoswdconfig))) MOD003
	return (_cgos.CgosWDogSetConfigStruct(hCgos, dwUnit, cgoswdconfig)) #MOD003

# bool CgosWDogSetConfig(HCGOS hCgos, unsigned long dwUnit, unsigned long timeout, unsigned long delay, unsigned long mode)
def wdogSetConfig(dwUnit, timeout, delay, mode):
	_cgos.CgosWDogSetConfig.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.c_ulong, ctypes.c_ulong)
	_cgos.CgosWDogSetConfig.restype = ctypes.c_bool
	return _cgos.CgosWDogSetConfig(hCgos, dwUnit, timeout, delay, mode)
# bool CgosWDogDisable(HCGOS hCgos, unsigned long dwUnit)
def wdogDisable(dwUnit):
	_cgos.CgosWDogDisable.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosWDogDisable.restype = ctypes.c_bool
	return _cgos.CgosWDogDisable(hCgos, dwUnit)

# bool CgosWDogGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSWDINFO *pInfo)
def wdogGetInfo(dwUnit):
	
	class CGOSWDINFO(ctypes.Structure):
		_fields_ = [
			('dwSize', ctypes.c_uint32),
			('dwFlags', ctypes.c_uint32),
			('dwMinTimeout', ctypes.c_uint32),
			('dwMaxTimeout', ctypes.c_uint32),
			('dwMinDelay', ctypes.c_uint32),
			('dwMaxDelay', ctypes.c_uint32),
			('dwOpModes',  ctypes.c_uint32), # supported operation mode mask (1<<opmode)
			('dwMaxStageCount', ctypes.c_uint32),
			('dwEvents', ctypes.c_uint32), # supported event mask (1<<event)
			('dwType', ctypes.c_uint32),
		]
	
	cgoswdinfo = CGOSWDINFO(0)
	cgoswdinfo.dwSize = len((cgoswdinfo._fields_) * ctypes.sizeof(ctypes.c_uint32))
	_cgos.CgosWDogGetInfo.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_voidp)
	_cgos.CgosWDogGetInfo.restype = ctypes.c_bool 
	if (_cgos.CgosWDogGetInfo(hCgos, dwUnit, ctypes.addressof(cgoswdinfo))) == True:
		results = {}
		for field in cgoswdinfo._fields_: results[field[0]] = getattr(cgoswdinfo, field[0])
		return results
	else: return False

	##########################################
	#####   FUNCTION GROUP TEMPERATURE   #####
	##########################################

# ulong CgosTemperatureCount(HCGOS hCgos)
def temperatureCount():
	_cgos.CgosTemperatureCount.argtype = ctypes.c_uint
	_cgos.CgosTemperatureCount.restype = ctypes.c_ulong
	return _cgos.CgosTemperatureCount(hCgos)
